Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_todoapprado.yml
+++ b/.github/workflows/main_todoapprado.yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EB6784E8B4954DB593C60C12EE656EBE }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A1D15E37A6004A2796A7678CDCFBDED2 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_732693BB038D4033A80A3FC3E340A0BF }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -68,4 +59,4 @@ jobs:
           app-name: 'todoapprado'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8B88E70881CE4BA4A44DEB6FE064DD5B }}
